--- a/index.html
+++ b/index.html
@@ -494,11 +494,11 @@
                 <p><strong>Address</strong><br>PG Seminar Hall<br> Sri Krishna College Of Technology,<br>Arivoli Nagar,<br> Perumal Nagar,<br>Kovaipudhur,<br>Coimbatore - 641 042.</p>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-3">
-                <p><strong>Contacts</strong><br>
+                <p><strong>Email</strong><br>
 tedxskct@skct.edu.in<br><br></p>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-3">
-                <p><strong>Co-ordinators</strong><br>Adarsh Krishnan<br><br></p>
+                <p><strong>Co-ordinators</strong><br>Adharsh Krishnan<br><br>Viren Dave<br></p>
             </div>
 
         </div>
