--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <h3 class="mbr-section-title display-2">WHAT IS TEDxSKCT</h3>
+                <h3 class="mbr-section-title display-2" style="color:#ff2b06;">TED</h3>
                 <small class="mbr-section-subtitle"></small>
             </div>
         </div>
@@ -124,7 +124,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 lead"><p>FEW LINES.</p></div>
+            <div class="col-xs-12 lead"><p>TED is a global non-profit community with the motto of Ideas Worth Spreading. It started in 1984 as an annual conference on Technology, Entertainment and Design, true to its name. Ever since, TED has grown to cover almost all topic from science to business to global issues in over 100 languages. World class speakers from a wide variety of disciplines and communities share their ideas in the form of short, powerful talks in under 18 minutes. For more information about TED's upcoming conferences, visit here. Follow TED on Twitter at TEDTalks, or on Facebook at TED.</p></div>
         </div>
     </div>
 
