--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
             <hr class="line" style="width: 25%;">
             <div class="section-text align-center mbr-white mbr-fonts-style display-5">
                     TEDxSKCT</div>
+          <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5"> Incepted during a wait at the cafe and progressing way ahead with the exceptionally creative minds fused to formulate the plans ,it was the most dramatic start to the most awaited event TEDxSKCT. Getting licensed by the parent TED and the institution waving green to our proposal we will evade unchartered borders  to garner your presence. With umpteen number of talks around the town,why us? With a team comprising of 150 champs working round the clock to make you stare in awe, speakers with experiences worth a lifetime, from decors to hospitality we are ready to amaze you with our fidelity. Still doubtful about us? Give us a ring anytime, i mean anytime because we plan TedxSKCT even in our dreams. Ingenious minds isn’t just the theme , It is who we are striving to be. </h3>
             <hr class="line" style="width: 25%;">
         </div>
     </div>
