--- a/index.html
+++ b/index.html
@@ -398,9 +398,9 @@
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">
-                    Contacts
+                    Contact
                 </h5>
-                <p class="mbr-text">tedxskct@skct.edu.in</p>
+              <p class="mbr-text">tedxskct@skct.edu.in <br> Pragati Badrinath - 9487782000 </br> </p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">
