--- a/index.html
+++ b/index.html
@@ -400,7 +400,8 @@
                 <h5 class="pb-3">
                     Contact
                 </h5>
-              <p class="mbr-text">tedxskct@skct.edu.in <br> Pragati Badrinath-9487782000 </br> <br>Abhishek Rajkumar-9994299488 </br> </p>
+              <p class="mbr-text">tedxskct@skct.edu.in <br>Pragati Badrinath-9487782000
+               <br>Abhishek Rajkumar-9994299488 </p>
             </div>
             
         </div>
