--- a/index.html
+++ b/index.html
@@ -182,16 +182,16 @@
             
         <div class="team-item col-lg-3 col-md-6">
                 <div class="item-image">
-                    <img src="assets/images/face6.jpg" media-simple="true">
+                    <img src="assets/images/sp.png" media-simple="true">
                 </div>
                 <div class="item-caption py-3">
                     <div class="item-name px-2">
                         <p class="mbr-fonts-style display-5">
-                           John Smith
+                           Speaker 1
                         </p>
                     </div>
                     <div class="item-role px-2">
-                        <p>Developer</p>
+                        <p>Unknown</p>
                     </div>
                     <div class="item-social pt-2">
                         <a href="https://twitter.com/mobirise" target="_blank">
@@ -206,16 +206,16 @@
                 </div>
             </div><div class="team-item col-lg-3 col-md-6">
                 <div class="item-image">
-                    <img src="assets/images/face6.jpg" media-simple="true">
+                    <img src="assets/images/sp.png" media-simple="true">
                 </div>
                 <div class="item-caption py-3">
                     <div class="item-name px-2">
                         <p class="mbr-fonts-style display-5">
-                           John Smith
+                           Speaker 2
                         </p>
                     </div>
                     <div class="item-role px-2">
-                        <p>Developer</p>
+                        <p>Unknown</p>
                     </div>
                     <div class="item-social pt-2">
                         <a href="https://twitter.com/mobirise" target="_blank">
@@ -230,16 +230,16 @@
                 </div>
             </div><div class="team-item col-lg-3 col-md-6">
                 <div class="item-image">
-                    <img src="assets/images/face6.jpg" media-simple="true">
+                    <img src="assets/images/sp.png" media-simple="true">
                 </div>
                 <div class="item-caption py-3">
                     <div class="item-name px-2">
                         <p class="mbr-fonts-style display-5">
-                           John Smith
+                           Speaker 3
                         </p>
                     </div>
                     <div class="item-role px-2">
-                        <p>Developer</p>
+                        <p>Unknown</p>
                     </div>
                     <div class="item-social pt-2">
                         <a href="https://twitter.com/mobirise" target="_blank">
@@ -254,16 +254,16 @@
                 </div>
             </div><div class="team-item col-lg-3 col-md-6">
                 <div class="item-image">
-                    <img src="assets/images/face6.jpg" media-simple="true">
+                    <img src="assets/images/sp.png" media-simple="true">
                 </div>
                 <div class="item-caption py-3">
                     <div class="item-name px-2">
                         <p class="mbr-fonts-style display-5">
-                           John Smith
+                           Speaker 4
                         </p>
                     </div>
                     <div class="item-role px-2">
-                        <p>Developer</p>
+                        <p>Unknownr</p>
                     </div>
                     <div class="item-social pt-2">
                         <a href="https://twitter.com/mobirise" target="_blank">
