--- a/index.html
+++ b/index.html
@@ -278,6 +278,31 @@
                 </div>
             </div></div>    
     </div>
+  
+  <div class="team-item col-lg-3 col-md-6">
+                <div class="item-image">
+                    <img src="assets/images/sp.png" media-simple="true">
+                </div>
+                <div class="item-caption py-3">
+                    <div class="item-name px-2">
+                        <p class="mbr-fonts-style display-5">
+                           Speaker 5
+                        </p>
+                    </div>
+                    <div class="item-role px-2">
+                        <p>Unknown</p>
+                    </div>
+                    <div class="item-social pt-2">
+                        <a href="https://twitter.com/mobirise" target="_blank">
+                            <span class="p-1 socicon-twitter socicon mbr-iconfont mbr-iconfont-social" media-simple="true"></span>
+                            <span class="p-1 socicon-facebook socicon mbr-iconfont mbr-iconfont-social" media-simple="true"></span>
+                            <span class="p-1 socicon-googleplus socicon mbr-iconfont mbr-iconfont-social" media-simple="true"></span>
+                            <span class="p-1 socicon-linkedin socicon mbr-iconfont mbr-iconfont-social" media-simple="true"></span>
+                            
+                            
+                        </a>
+                    </div>
+                </div>
 </section>
 
 <section class="cid-qs3uMLl39P" id="social-buttons2-h" data-rv-view="294">
