--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <a class="nav-link link text-white display-4" href="#top">
                         &nbsp;HOME</a>
                 </li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#content4-3">ABOUT</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#countdown1-5">WHEN</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#map1-7">VENUE</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#features16-8">SPEAKERS</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#form1-9">CONTACT</a></li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://mobirise.com">BUY TICKET</a></div>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://www.facebook.com/TEDxSKCT/">BUY TICKET</a></div>
         </div>
     </nav>
 </section>
