--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             
         <div class="team-item col-lg-3 col-md-6">
                 <div class="item-image">
-                    <img src="assets/images/sp.png" media-simple="true">
+                    <img src="assets/images/s1.jpg" media-simple="true">
                 </div>
                 <div class="item-caption py-3">
                     <div class="item-name px-2">
