--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                 </div>
             </div><div class="team-item col-lg-3 col-md-6">
                 <div class="item-image">
-                    <img src="assets/images/sp.png" media-simple="true">
+                    <img src="assets/images/s2.jpg" media-simple="true">
                 </div>
                 <div class="item-caption py-3">
                     <div class="item-name px-2">
@@ -212,7 +212,7 @@
                 </div>
             </div><div class="team-item col-lg-3 col-md-6">
                 <div class="item-image">
-                    <img src="assets/images/sp.png" media-simple="true">
+                    <img src="assets/images/s3.jpg" media-simple="true">
                 </div>
                 <div class="item-caption py-3">
                     <div class="item-name px-2">
@@ -227,7 +227,7 @@
                 </div>
             </div><div class="team-item col-lg-3 col-md-6">
                 <div class="item-image">
-                    <img src="assets/images/sp.png" media-simple="true">
+                    <img src="assets/images/s4.jpg" media-simple="true">
                 </div>
                 <div class="item-caption py-3">
                     <div class="item-name px-2">
