--- a/index.html
+++ b/index.html
@@ -187,11 +187,11 @@
                 <div class="item-caption py-3">
                     <div class="item-name px-2">
                         <p class="mbr-fonts-style display-5">
-                           Speaker 
+                           Siddharth Mandala
                         </p>
                     </div>
                     <div class="item-role px-2">
-                        <p>Unknown</p>
+                        <p>Inventor - Electric Shoe</p>
                     </div>
                    
                 </div>
