--- a/index.html
+++ b/index.html
@@ -202,11 +202,11 @@
                 <div class="item-caption py-3">
                     <div class="item-name px-2">
                         <p class="mbr-fonts-style display-5">
-                           Speaker 
+                           Shri.Adinarayanan 
                         </p>
                     </div>
                     <div class="item-role px-2">
-                        <p>Unknown</p>
+                        <p>Anaadi Foundation</p>
                     </div>
 
                 </div>
@@ -217,11 +217,11 @@
                 <div class="item-caption py-3">
                     <div class="item-name px-2">
                         <p class="mbr-fonts-style display-5">
-                           Speaker 
+                           Ghibran 
                         </p>
                     </div>
                     <div class="item-role px-2">
-                        <p>Unknown</p>
+                        <p>Ghibran</p>
                     </div>
 
                 </div>
@@ -232,11 +232,11 @@
                 <div class="item-caption py-3">
                     <div class="item-name px-2">
                         <p class="mbr-fonts-style display-5">
-                           Speaker 
+                           Kamal Raj 
                         </p>
                     </div>
                     <div class="item-role px-2">
-                        <p>Unknown</p>
+                        <p>Anti-Human Trafficking Activist</p>
                     </div>
 
                 </div>
