--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
 
     <div class="container">
         <div class="media-container-column col-lg-8 offset-lg-2" data-form-type="formoid">
-                <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
+                <div data-form-alert="" hidden="">Thanks for filling out this form!</div>
 
                 <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="4sAjqKC2jbHr7ov9a07Uhg6KhoQxX5aDn9i6SZlCpL4I25I2GJW9L3yorvYj0eItNaP8wWFFexryuxm1IBrG02S9RjBYHi85OQBFcZuRwAtvaZN1U20janRShUGcNoLB">
                     <div class="row row-sm-offset">
