--- a/index.html
+++ b/index.html
@@ -224,7 +224,8 @@
                     </div>
 
                 </div>
-            </div><div class="team-item col-lg-3 col-md-6">
+            </div>
+          <div class="team-item col-lg-3 col-md-6">
                 <div class="item-image">
                     <img src="assets/images/s4.jpg" media-simple="true">
                 </div>
@@ -239,7 +240,25 @@
                     </div>
 
                 </div>
-            </div></div>    
+            </div>
+          <div class="team-item col-lg-3 col-md-6">
+                <div class="item-image">
+                    <img src="assets/images/s4.jpg" media-simple="true">
+                </div>
+                <div class="item-caption py-3">
+                    <div class="item-name px-2">
+                        <p class="mbr-fonts-style display-5">
+                           Kamal Raj 
+                        </p>
+                    </div>
+                    <div class="item-role px-2">
+                        <p>Anti-Human Trafficking Activist</p>
+                    </div>
+
+                </div>
+            </div>
+          
+      </div>    
     </div>
   
   
