--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
             </div>
           <div class="team-item col-lg-3 col-md-6">
                 <div class="item-image">
-                    <img src="assets/images/s5.jpg" media-simple="true">
+                    <img src="assets/images/s5.jpeg" media-simple="true">
                 </div>
                 <div class="item-caption py-3">
                     <div class="item-name px-2">
@@ -259,7 +259,7 @@
             </div>
         <div class="team-item col-lg-3 col-md-6">
                 <div class="item-image">
-                    <img src="assets/images/s6.jpg" media-simple="true">
+                    <img src="assets/images/s6.jpeg" media-simple="true">
                 </div>
                 <div class="item-caption py-3">
                     <div class="item-name px-2">
@@ -276,7 +276,7 @@
           
           <div class="team-item col-lg-3 col-md-6">
                 <div class="item-image">
-                    <img src="assets/images/s7.jpg" media-simple="true">
+                    <img src="assets/images/s7.jpeg" media-simple="true">
                 </div>
                 <div class="item-caption py-3">
                     <div class="item-name px-2">
@@ -293,7 +293,7 @@
           
           <div class="team-item col-lg-3 col-md-6">
                 <div class="item-image">
-                    <img src="assets/images/s8.jpg" media-simple="true">
+                    <img src="assets/images/s8.jpeg" media-simple="true">
                 </div>
                 <div class="item-caption py-3">
                     <div class="item-name px-2">
