--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="index.html">
-                         <img src="assets/images/icon-386x94.png" alt="TEDxSKCT" title="TEDxSKCT" media-simple="true" style="height: 3.8rem;">
+                         <img src="assets/images/logo.jpeg" alt="TEDxSKCT" title="TEDxSKCT" media-simple="true" style="height: 3.8rem;">
                     </a>
                 </span>
                 
