--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="assets/images/logo-128x128.png" type="image/x-icon">
   <meta name="description" content="TED is a global non-profit community with the motto of Ideas Worth Spreading. It started in 1984 as an annual conference on Technology, Entertainment and Design, true to its name. Ever since, TED has grown to cover almost all topic from science to business to global issues in over 100 languages. World class speakers from a wide variety of disciplines and communities share their ideas in the form of short, powerful talks in under 18 minutes. For more information about TED's upcoming conferences, visit here. Follow TED on Twitter at TEDTalks, or on Facebook at TED.">
-  <title>TEDXSKCT</title>
+  <title>TEDxSKCT</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik:300,300i,400,400i,500,500i,700,700i,900,900i">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
@@ -53,7 +53,7 @@
                     <a class="nav-link link text-white display-4" href="#top">
                         &nbsp;HOME</a>
                 </li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#content4-3">ABOUT</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#countdown1-5">WHEN</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#map1-7">VENUE</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#features16-8">SPEAKERS</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#form1-9">CONTACT</a></li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://www.facebook.com/TEDxSKCT/">BUY TICKET</a></div>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://in.explara.com/e/tedxskct/">BUY TICKET</a></div>
         </div>
     </nav>
 </section>
