--- a/index.html
+++ b/index.html
@@ -600,7 +600,8 @@ Indhushree is an entertainer, who has mastered the art of humour, magic and vent
   <script src="assets/mobirise-gallery/player.min.js"></script>
   <script src="assets/mobirise-gallery/script.js"></script>
   <script src="assets/formoid/formoid.min.js"></script>
-  
+  <!-- Go to www.addthis.com/dashboard to customize your tools -->
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-59b56927312d73cb"></script>
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbri-down mbr-iconfont"></i></a></div>
     <input name="animation" type="hidden">
