--- a/index.html
+++ b/index.html
@@ -425,8 +425,8 @@
                 <h5 class="pb-3">
                     Contact
                 </h5>
-              <p class="mbr-text">tedxskct@skct.edu.in <br>Pragati Badrinath-9487782000
-               <br>Abhishek Rajkumar-9994299488 </p>
+              <p class="mbr-text">tedxskct@skct.edu.in <br>PAdharsh Krishnan - 8695983939
+               <br>Viren Dave - 9442802840</p>
             </div>
             
         </div>
