--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
                 <h5 class="pb-3">
                     Contact
                 </h5>
-              <p class="mbr-text">tedxskct@skct.edu.in <br>PAdharsh Krishnan - 8695983939
+              <p class="mbr-text">tedxskct@skct.edu.in <br>Adharsh Krishnan - 8695983939
                <br>Viren Dave - 9442802840</p>
             </div>
             
