--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     
     <div class="container ">
         <h2 class="mbr-section-title pb-3 align-center mbr-fonts-style display-5">
-            Countdown
+            Countdown - October 27, 2018
         </h2>
         <h3 class="mbr-section-subtitle align-center mbr-fonts-style display-5"></h3>
         
