--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     
     <div class="container align-center">
         <h2 class="pb-3 mbr-fonts-style mbr-section-title display-2">
-            SPEAKERS</h2>
+            SPEAKERS OF 2017</h2>
         <h3 class="pb-5 mbr-section-subtitle mbr-fonts-style mbr-light display-5">.
         </h3>
         <div class="row media-row">
