--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <a class="nav-link link text-white display-4" href="#top">
                         &nbsp;HOME</a>
                 </li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#content4-3">ABOUT</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#countdown1-5">WHEN</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#map1-7">VENUE</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#features16-8">SPEAKERS</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#form1-9">CONTACT</a></li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://in.explara.com/e/tedxskct/">BUY TICKET</a></div>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://www.yepdesk.com/tedxskct-2018">BUY TICKET</a></div>
         </div>
     </nav>
 </section>
