--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
         </div>
     </div>
 </section>
-    <div class="modal fade" id="speaker-1">
+    <!--<div class="modal fade" id="speaker-1">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header" style="color:black;">
@@ -394,106 +394,7 @@ Find out more about him and his organization on the 23rd of September at our TED
             </div>
         </div>
     </div>
-    <div class="modal fade" id="speaker-3">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header" style="color:black;">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true" style="color:black;">&times;</button>
-                    <h4 class="modal-title">
-
-Mohamaad Ghibran
-</h4>
-                </div>
-                <div class="modal-body">
-                    Ghibran is an Indian music composer with a passion of communicative music. Since his earlier days, he has done a commendable job in the field of South Indian films. He is regarded as one of the most successful debut composer and has build top-of-chart songs for movies like Papanaasam and Thoongavanam. He believes in improving the society through his composition. Embark with us on a musician's journey on the 23rd of September at TEDxSKCT.  Registrations for TEDxSKCT will start soon!
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="modal fade" id="speaker-4">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header" style="color:black;">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true" style="color:black;">&times;</button>
-                    <h4 class="modal-title">
-
-Kamal Raj 
-</h4>
-                </div>
-                <div class="modal-body">
-                    Did you know that Coimbatore has been a victim of human trafficking? 
-Human Trafficking  is the action of illegally transporting people from one country to another typically for the purposes of forced labour or commercial sexual exploitation. Mr.Kamal is the first Indian student to stand for Anti-Human trafficking in Thailand. He has helped several minors and rescued them from temple prostitution in India. In Coimbatore, he is launching a non-profit organization called "The Cross International" to help physical, mental and sexual abused people. So let's learn more and fight against human trafficking with his wonderful talk at TEDxSKCT on September 23, 2017!
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="modal fade" id="speaker-5">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header" style="color:black;">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true" style="color:black;">&times;</button>
-                    <h4 class="modal-title">
-
-Abdul Ghani
-</h4>
-                </div>
-                <div class="modal-body">
-                    Social activist, Green Man of India.
-Ever thought that anybody in this Earth can plant forty lakh trees before turning 40?
-Having the talent to foster and encourage creativity, individual expression and co-operation among team workers, He shifted his discipline from handling cash transactions, fixed deposits and handling money to 'Saving Mother Earth'. Starting off from humble beginnings, today he handle the task of mentoring and inspiring the youth as the Chief Coordinator of  "Green Kalam" movement advised by former president of India Dr.A.P.J Abdul Kalam.He is the founder of Youth NGO Summit. The greatest threat to our planet is believing that someone else will save it. Let's save our planet earth with his wonderful talk on TEDxSKCT 
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="modal fade" id="speaker-6">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header" style="color:black;">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true" style="color:black;">&times;</button>
-                    <h4 class="modal-title">
-
-Agnishwar Jayaprakash
-</h4>
-                </div>
-                <div class="modal-body">
-                    Agnishwar is the founder of Ignite India - Top 10 Socio-Economic Educational movements focusing on innovations and technology for young entrepreneurs. First Indian to win "Outstanding Youth Delegate Award" from the United Nations and an International youth fellowship. Recognized as ambassador for " Sustainable energy for all". He is also the director of Agni foundation and Ezham Arivu - first ever reality TV show for young entrepreneurs in science and technology. He is the only Indian Swimmer in history to win 6 gold medals at the 2007 south asian games and a lot more ! At present, his goal is to transform India into a developed nation with the help of young dreamers and achievers. Let's hear his dream of making India great on TEDxSKCT on September 23, 2017 !
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="modal fade" id="speaker-7">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header" style="color:black;">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true" style="color:black;">&times;</button>
-                    <h4 class="modal-title">
-
-Iyan Karthikeyan
-</h4>
-                </div>
-                <div class="modal-body">
-                    How can we fight back against the fake news infecting our information feeds on social media and political systems? New research suggests that education and filtering technology might not be enough. An Engineer by graduate, an avid and passionate social leader,  Iyan Karthikeyan started facing his dreams on a very small scale. YouTurn is the dream which made Iyan work relentlessly around the clock. It was started as a small page on Facebook with the goal of exposing fake news to common people and now it has grown huge. YouTurn is doing a wonderful job on exposing fake news on social media with valid proof. Iyan states , "Fake news is gonna create a massive destruction on social media if it isn't cared at present".  Let's hear the importance of fake news and how to eradicate it from social media at TEDxSKCT on September 23, 2017 !
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="modal fade" id="speaker-8">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header" style="color:black;">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true" style="color:black;">&times;</button>
-                    <h4 class="modal-title">
-
-Indushree Raveendra
-</h4>
-                </div>
-                <div class="modal-body">
-                    Ventriloquism, or ventriloquy, is an act of stagecraft in which a person (a ventriloquist) changes his or her voice so that it appears that the voice is coming from elsewhere, usually a puppeteered "dummy".
-Indhushree is an entertainer, who has mastered the art of humour, magic and ventriloquism. This female star has eyes on the Guinness Book of World Records through her performance with a 10 feet doll. She also is the only female ventriloquist to possess the talent. She has performed puppet show in several national events such as India's got talent. Board with us to enter the enchanting world of ventriloquism on the 23rd of September with us, at TEDxSKCT.
-                </div>
-            </div>
-        </div>
-    </div>
+    -->
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
