--- a/index.html
+++ b/index.html
@@ -361,18 +361,18 @@
         </div>
     </div>
 </section>
-    <!--<div class="modal fade" id="speaker-1">
+    <div class="modal fade" id="speaker-1">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header" style="color:black;">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true" style="color:black;">&times;</button>
                     <h4 class="modal-title">
 
-Siddharth Mandala
+Mithun Govind
 </h4>
                 </div>
                 <div class="modal-body">
-                    This 17 year old teenager from Hyderabad invented a unique shoe for women to keep rapists away. This, allows women to electrocute perpetrators of crime. He is now a social entrepreneur, who was fuelled by the protest following the Nirbhaya rape case. He also is the founder of Cognizance Welfare Initiative.
+                     A solo cyclist, Mithun Govind cycled 4500kms from Kashmir to Kanyakumari in 57 days. A graduate of Fashion Management and working in the field of Marketing but his heart lies in pedalling. A rejection of an idea that he had set his hopes on was the reason that made him embark on this ambitious journey. He lives by the slogan, "Peace in Harmony".
                 </div>
             </div>
         </div>
@@ -384,17 +384,16 @@ Siddharth Mandala
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true" style="color:black;">&times;</button>
                     <h4 class="modal-title">
 
-Shri Adinarayanan Venkatachalam
+Swarnalatha
 </h4>
                 </div>
                 <div class="modal-body">
-                  Anaadi Foundation is a socio-spiritual organization dedicated to bring about self-unfoldment of individuals. Shri Adinarayanan completed his master of science in Computer Science Engineering and became an assistant professor. His undeterred vision to educate people about Yogic sciences encouraged him to initiate Anaadi Foundation.
-Find out more about him and his organization on the 23rd of September at our TEDx event at SKCT!  
+                  Swarnalatha went up the stage on a wheelchair and shattered several stereotypes by winning the title Mrs. Popular at a beauty pageant. Diagonsed with primary progressive sclerosis in 2009 left her paralysed from her leg down didn't deter her from breaking barriers. A speaker and a social activist, she runs an organization for the betterment of the neuromuscular disordered.
+[9/28, 2:58 PM] Pragati Badrinath: Saji Mathews is an energetic and innovative young man who lost his vision at the age of 23 years. In spite of his visual disability, he went on to attain a Master’s Degree in Business Administration also. He now works as an officer with the government of India. As a “self-energised personality,” he helps with “broken people” through counselling sessions. “Be positive and confident, and you’ll carry the world in your hands” is something that Saji Mathews often says.
                 </div>
             </div>
         </div>
     </div>
-    -->
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
