--- a/index.html
+++ b/index.html
@@ -366,10 +366,7 @@
             <div class="modal-content">
                 <div class="modal-header" style="color:black;">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true" style="color:black;">&times;</button>
-                    <h4 class="modal-title">
-
-Mithun Govind
-</h4>
+                    <h4 class="modal-title">Mithun Govind</h4>
                 </div>
                 <div class="modal-body">
                      A solo cyclist, Mithun Govind cycled 4500kms from Kashmir to Kanyakumari in 57 days. A graduate of Fashion Management and working in the field of Marketing but his heart lies in pedalling. A rejection of an idea that he had set his hopes on was the reason that made him embark on this ambitious journey. He lives by the slogan, "Peace in Harmony".
@@ -382,10 +379,7 @@ Mithun Govind
             <div class="modal-content">
                 <div class="modal-header" style="color:black;">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true" style="color:black;">&times;</button>
-                    <h4 class="modal-title">
-
-Swarnalatha
-</h4>
+                    <h4 class="modal-title">Swarnalatha</h4>
                 </div>
                 <div class="modal-body">
                   Swarnalatha went up the stage on a wheelchair and shattered several stereotypes by winning the title Mrs. Popular at a beauty pageant. Diagonsed with primary progressive sclerosis in 2009 left her paralysed from her leg down didn't deter her from breaking barriers. A speaker and a social activist, she runs an organization for the betterment of the neuromuscular disordered.
