--- a/index.html
+++ b/index.html
@@ -502,10 +502,10 @@
             <div class="modal-content">
                 <div class="modal-header" style="color:black;">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true" style="color:black;">&times;</button>
-                    <h4 class="modal-title">Saji Mathews</h4>
+                    <h4 class="modal-title">Shweta Gupta</h4>
                 </div>
                 <div class="modal-body">
-                  
+                  Always looking on the sweet side of things, Shweta Gupta found a way to share edible love right from her home! A self made entrepreneur, she started this journey 15 years ago with her start-up. 'Brown Sugar' as she likes to say, "Pursue that what you love, only then will you enjoy your life". Shweta is truly living the sweet life and conquering hearts one baked good at a time.
                 </div>
             </div>
         </div>
@@ -515,10 +515,10 @@
             <div class="modal-content">
                 <div class="modal-header" style="color:black;">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true" style="color:black;">&times;</button>
-                    <h4 class="modal-title">Shweta Gupta</h4>
+                    <h4 class="modal-title">Saji Mathews</h4>
                 </div>
                 <div class="modal-body">
-                  Krishna Sai from chennai broke the past Guinnes record by solving 2,474 cubes in 24 hours and by using only one hand! Krishna is a 'CUBER', and his journey began in class 8 with little help and guidance, However he began taking it up seriously in 2014.
+                  Saji Mathews is an energetic and innovative young main who lost his vision at the age of 23 years. In spite of his disability, he went to obtain a Master's Degree in Business Administration also. He now works as an officer with the Government of India. As a "self-engineered personality", he helps with "broken people" through counselling sessions. "Be positive and confident, and you'll carry the world in your hands" is something that Saji Mathews often says.
                 </div>
             </div>
         </div>
