--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                     
                     <div class="item-name px-2">
                     <p class="mbr-fonts-style display-5">
-                    Aqeel
+                    Aqueel
                     </p>
                     </div>
                     <div class="item-role px-2">
