--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
                 <h5 class="pb-3">
                     Contact
                 </h5>
-              <p class="mbr-text">tedxskct@skct.edu.in <br><br>Viren Dave - 9442802840<br><br>Afrah Anwar - 9500456000</p>
+              <p class="mbr-text">tedxskct@skct.edu.in <br>John George - 80787 62872<br>Aadhishwaran - 94429 64938</p>
             </div>
             
         </div>
@@ -461,7 +461,7 @@
         <div class="media-container-row align-center mbr-white">
             <div class="col-12">
                 <p class="mbr-text mb-0 mbr-fonts-style display-7">
-                    © Copyright 2018 TEDxSKCT - All Rights Reserved
+                    © Copyright 2019 TEDxSKCT - All Rights Reserved
                 </p>
             </div>
         </div>
