--- a/pastevents.html
+++ b/pastevents.html
@@ -50,9 +50,13 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="#top">
+                    <a class="nav-link link text-white display-4" href="index.html">
                         &nbsp;HOME</a>
-                </li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#content4-3">ABOUT</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#countdown1-5">WHEN</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#map1-7">VENUE</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#features16-8">SPEAKERS</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#form1-9">CONTACT</a></li></ul>
+                </li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#content4-3">ABOUT</a></li>
+              <li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#countdown1-5">WHEN</a></li>
+              <li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#map1-7">VENUE</a></li>
+              <li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#features16-8">SPEAKERS</a></li>
+              <li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#form1-9">CONTACT</a></li></ul>
                 <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="tedxskct.com/pastevents.html">Past Events</a></div>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://www.yepdesk.com/tedxskct-2018">BUY TICKET</a></div>
         </div>
@@ -492,4 +496,3 @@
   <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5bae064dc6580a30"></script>
   </body>
 </html>
-
