--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     
     <div class="container ">
         <h2 class="mbr-section-title pb-3 align-center mbr-fonts-style display-5">
-            Countdown - October 13, 2018
+            Countdown - October xx, 2019.
         </h2>
         <h3 class="mbr-section-subtitle align-center mbr-fonts-style display-5"></h3>
         
