--- a/pastevents.html
+++ b/pastevents.html
@@ -443,6 +443,85 @@
             </div>
         </div>
     </div>
+  
+   <div class="modal fade" id="speaker-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header" style="color:black;">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true" style="color:black;">&times;</button>
+                    <h4 class="modal-title">Swarnalatha</h4>
+                </div>
+                <div class="modal-body">
+                  Swarnalatha went up the stage on a wheelchair and shattered several stereotypes by winning the title Mrs. Popular at a beauty pageant. Diagonsed with primary progressive sclerosis in 2009 left her paralysed from her leg down didn't deter her from breaking barriers. A speaker and a social activist, she runs an organization for the betterment of the neuromuscular disordered.
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="speaker-2">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header" style="color:black;">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true" style="color:black;">&times;</button>
+                    <h4 class="modal-title">Mithun Govind</h4>
+                </div>
+                <div class="modal-body">
+                     A solo cyclist, Mithun Govind cycled 4500kms from Kashmir to Kanyakumari in 57 days. A graduate of Fashion Management and working in the field of Marketing but his heart lies in pedalling. A rejection of an idea that he had set his hopes on was the reason that made him embark on this ambitious journey. He lives by the slogan, "Peace in Harmony".
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="speaker-4">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header" style="color:black;">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true" style="color:black;">&times;</button>
+                    <h4 class="modal-title">Aqueel</h4>
+                </div>
+                <div class="modal-body">
+                  A member of Chennai's first Graffiti crew, the third kind - T3K, Aqeel says. "Graffiti, unlike a lot of other street art, doesn't really deliver a message. Inn that sense it is a narcissist form. "An illustrator and artist, he gets his inspiration ( "Soaking up" in graffiti terminology ) from the people around and everday scenerios. He conducts training workshops and judges art competitions.
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="speaker-3">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header" style="color:black;">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true" style="color:black;">&times;</button>
+                    <h4 class="modal-title">Krishna Sai</h4>
+                </div>
+                <div class="modal-body">
+                  Krishna Sai from chennai broke the past Guinnes record by solving 2,474 cubes in 24 hours and by using only one hand! Krishna is a 'CUBER', and his journey began in class 8 with little help and guidance, However he began taking it up seriously in 2014.
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="speaker-6">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header" style="color:black;">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true" style="color:black;">&times;</button>
+                    <h4 class="modal-title">Shweta Gupta</h4>
+                </div>
+                <div class="modal-body">
+                  Always looking on the sweet side of things, Shweta Gupta found a way to share edible love right from her home! A self made entrepreneur, she started this journey 15 years ago with her start-up. 'Brown Sugar' as she likes to say, "Pursue that what you love, only then will you enjoy your life". Shweta is truly living the sweet life and conquering hearts one baked good at a time.
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="speaker-5">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header" style="color:black;">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true" style="color:black;">&times;</button>
+                    <h4 class="modal-title">Saji Mathews</h4>
+                </div>
+                <div class="modal-body">
+                  Saji Mathews is an energetic and innovative young main who lost his vision at the age of 23 years. In spite of his disability, he went to obtain a Master's Degree in Business Administration also. He now works as an officer with the Government of India. As a "self-engineered personality", he helps with "broken people" through counselling sessions. "Be positive and confident, and you'll carry the world in your hands" is something that Saji Mathews often says.
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
   
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
