--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
                     <a class="nav-link link text-white display-4" href="#top">
-                        &nbsp;HOME</a>
+                        &nbsp;Home</a>
                 </li><li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#content4-3">About</a></li>
               <li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#countdown1-5">When</a></li>
               <li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#map1-7">Venue</a></li>
               <li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#features16-8">Speakers</a></li>
-              <li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#form1-9">Contact</a></li></ul>
-              <li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#social-buttons2-h">Social</a></li></ul>
+              <li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#form1-9">Contact</a></li>
+              <li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#social-buttons2-h">Social Media</a></li></ul>
               <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="pastevents.html">Past Events</a></div>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://www.yepdesk.com/tedxskct-2018">BUY TICKET</a></div>
         </div>
