--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
               <li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#countdown1-5">When</a></li>
               <li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#map1-7">Venue</a></li>
               <li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#features16-8">Speakers</a></li>
-              <li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#form1-9">Contact</a></li>
-              <li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#social-buttons2-h">Social Media</a></li></ul>
+              <li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#social-buttons2-h">Social Media</a></li>
+              <li class="nav-item"><a class="nav-link link text-white display-4" href="index.html#form1-9">Contact</a></li></ul>
               <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="pastevents.html">Past Events</a></div>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://www.yepdesk.com/tedxskct-2018">BUY TICKET</a></div>
         </div>
@@ -94,7 +94,7 @@
             <div class="title col-12 col-md-8">
                 <h2 class="align-center pb-3 mbr-fonts-style display-1">
                     TED</h2>
-                <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">TED is a global non-profit community with the motto of Ideas Worth Spreading. It started in 1984 as an annual conference on Technology, Entertainment and Design, true to its name. Ever since, TED has grown to cover almost all topic from science to business to global issues in over 100 languages. World class speakers from a wide variety of disciplines and communities share their ideas in the form of short, powerful talks in under 18 minutes. For more information about TED's upcoming conferences, visit here. Follow TED on Twitter at TEDTalks, or on Facebook at TED.</h3>
+                <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">TED is a global non-profit community with the motto of Ideas Worth Spreading. It started in 1984 as an annual conference on Technology, Entertainment and Design, true to its name. Ever since, TED has grown to cover almost all topic from science to business to global issues in over 100 languages. World class speakers from a wide variety of disciplines and communities share their ideas in the form of short, powerful talks in under 18 minutes. For more information about TED's upcoming conferences, visit <a href="https://www.ted.com">here</a>. Follow TED on <a href="https://www.twitter.com/tedtalks">Twitter</a>, at TEDTalks on  <a href="https://www.youtube.com/user/TEDtalksDirector">YouTube</a> , or on Facebook at <a href="https://www.facebook.com/TED">TED.</a> </h3>
                 
             </div>
         </div>
