--- a/pastevents.html
+++ b/pastevents.html
@@ -71,25 +71,6 @@
     </div>
 </section>
 
-<section class="countdown1 cid-qs3p67nyiV" id="countdown1-5" data-rv-view="274">
-    <div class="container ">
-        <h2 class="mbr-section-title pb-3 align-center mbr-fonts-style display-5">
-            Countdown - October 13, 2018
-        </h2>
-        <h3 class="mbr-section-subtitle align-center mbr-fonts-style display-5"></h3>
-        
-    </div>
-    <div class="container countdown-cont align-center">
-        <div class="daysCountdown" title="Days"></div>
-        <div class="hoursCountdown" title="Hours"></div> 
-        <div class="minutesCountdown" title="Minutes"></div> 
-        <div class="secondsCountdown" title="Seconds"></div>
-        <div class="countdown pt-5 mt-2" data-due-date="2018/10/13"> 
-        </div>
-    </div>
-</section>
-
-
 <section class="features16 cid-qs3rkFRM76" id="features16-7" data-rv-view="282">
     <div class="container align-center">
         <h2 class="pb-3 mbr-fonts-style mbr-section-title display-2">
@@ -166,7 +147,7 @@
 
             <div class="team-item col-lg-3 col-md-6" data-toggle="modal" href='#speaker-5'>
                 <div class="item-image">
-                    <img src="assets/images/s5.jpg" media-simple="true">
+                    <img src="assets/images/s5_2017.jpg" media-simple="true">
                 </div>
                 <div class="item-caption py-3">
                     <div class="item-name px-2">
@@ -182,7 +163,7 @@
 
             <div class="team-item col-lg-3 col-md-6" data-toggle="modal" href='#speaker-6'>
                 <div class="item-image">
-                    <img src="assets/images/s6.jpg" media-simple="true">
+                    <img src="assets/images/s6_2017.jpg" media-simple="true">
                 </div>
                 <div class="item-caption py-3">
                     <div class="item-name px-2">
