--- a/pastevents.html
+++ b/pastevents.html
@@ -152,7 +152,7 @@
                 <div class="item-caption py-3">
                     <div class="item-name px-2">
                         <p class="mbr-fonts-style display-5">
-                            Saji Mathews
+                            Abdul Ghani
                         </p>
                     </div>
                     <div class="item-role px-2">
@@ -168,7 +168,7 @@
                 <div class="item-caption py-3">
                     <div class="item-name px-2">
                         <p class="mbr-fonts-style display-5">
-                            Shweta Gupta
+                            Iyan Karthikeyan
                         </p>
                     </div>
                     <div class="item-role px-2">
