--- a/pastevents.html
+++ b/pastevents.html
@@ -419,7 +419,7 @@
         <div class="media-container-row align-center mbr-white">
             <div class="col-12">
                 <p class="mbr-text mb-0 mbr-fonts-style display-7">
-                         This independent TEDx event is operated under license from TED.
+                         This independent TEDx event is operated under license from TED. <br>
                   TEDxSKCT is hosted by the students of Sri Krishna College of Technology, Coimbatore. 
                 </p>
             </div>
